# ins

./: .clang-format  .gitignore  CMakeLists.txt  README.md  plot.py  txt2bin.py
include/ins/: imu.h  utils.h
src/: imu.cpp  imu_update.cpp  main.cpp  main_check.cpp
